--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
-    "*": "eslint --fix --no-warn-ignored"
+    "*": "eslint --fix"
   }
 }
