--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "paths": {
-      "src/*": ["./src/*"]
+      "@src/*": ["./src/*"],
+      "@stores/*": ["./src/stores/*"]
     },
     "resolveJsonModule": true,
     "allowImportingTsExtensions": true,
