--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "vue-tsc && vite build",
-    "build:watch": "vite build --watch --mode development",
+    "build:watch": "cross-env __DEV__=true vite build --watch --mode development",
     "dev": "pnpm build:watch",
     "preview": "vite preview"
   },
@@ -32,6 +32,7 @@
     "@unocss/preset-uno": "^0.58.8",
     "@unocss/preset-web-fonts": "^0.58.8",
     "@vitejs/plugin-vue": "^5.0.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
     "lint-staged": "^15.2.2",
