--- a/package.json
+++ b/package.json
@@ -2,50 +2,66 @@
   "name": "@lhvision/extensions",
   "type": "module",
   "version": "1.0.0",
-  "packageManager": "pnpm@8.15.0",
-  "description": "想象中的 chrome://newtab",
+  "packageManager": "pnpm@9.15.0",
+  "description": "想象中的 chrome extension",
   "author": "lhvision",
   "license": "MIT",
-  "keywords": [],
-  "main": "index.js",
+  "keywords": [
+    "chrome extension",
+    "vue"
+  ],
   "engines": {
-    "node": ">=20.11.0 || >=21.2.0"
+    "node": ">=22.0.0"
   },
   "scripts": {
-    "build": "vue-tsc && vite build",
-    "build:watch": "cross-env __DEV__=true vite build --watch --mode development",
-    "dev": "pnpm build:watch",
-    "preview": "vite preview"
+    "clean:turbo": "rimraf .turbo && turbo clean:turbo",
+    "clean:bundle": "rimraf dist && turbo clean:bundle",
+    "clean:node_modules": "rimraf node_modules && pnpm clean:node_modules",
+    "build": "pnpm clean:bundle && turbo build",
+    "dev": "turbo ready && cross-env __DEV__=true turbo watch dev --concurrency 20",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix",
+    "eslint_pnpm": "pnpm run -r lint:eslint",
+    "lint-staged": "run-s lint:*",
+    "lint-config": "eslint --inspect-config"
   },
   "dependencies": {
-    "@vueuse/core": "^10.9.0",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.0.13"
+    "@lhvision/helpers": "^2.1.10",
+    "@vueuse/core": "^12.2.0",
+    "pinia": "^2.3.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.6",
-    "@types/chrome": "^0.0.263",
-    "@types/node": "^20.12.2",
-    "@unocss/eslint-plugin": "^0.58.8",
-    "@unocss/preset-attributify": "^0.58.8",
-    "@unocss/preset-uno": "^0.58.8",
-    "@unocss/preset-web-fonts": "^0.58.8",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@antfu/eslint-config": "^3.12.1",
+    "@types/chrome": "^0.0.287",
+    "@types/node": "^22.10.2",
+    "@unocss/eslint-plugin": "^0.65.2",
+    "@unocss/preset-attributify": "^0.65.2",
+    "@unocss/preset-uno": "^0.65.2",
+    "@unocss/preset-web-fonts": "^0.65.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "ansi-escapes": "^7.0.0",
+    "chalk": "^5.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-format": "^0.1.0",
-    "lint-staged": "^15.2.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-format": "^0.1.3",
+    "eslint-plugin-oxlint": "^0.15.5",
+    "lint-staged": "^15.2.11",
+    "npm-run-all2": "^7.0.2",
+    "oxlint": "^0.15.5",
+    "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.2.2",
-    "unocss": "^0.58.8",
-    "vite": "^5.2.0",
-    "vue-tsc": "^2.0.6"
+    "turbo": "^2.3.3",
+    "typescript": "^5.7.2",
+    "unocss": "^0.65.2",
+    "vite": "^6.0.5",
+    "vue-tsc": "^2.2.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
+    "pre-commit": "pnpm lint-staged && git add ."
   },
   "lint-staged": {
-    "*": "eslint --fix"
+    "*": "oxlint . --fix -D correctness --ignore-path .gitignore && eslint . --fix"
   }
 }
